--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Dustin Davis</h1>
-      <p>I'm <span class="typed" data-typed-items="Front-End Developer, Back-End Developer"></span></p>
+      <p>I'm know <span class="typed" data-typed-items="Python, JavaScript, TypeScript, Unittest, MySQL, NoSQL, CSS"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/Little_Fl1ck" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/DustinD12345321/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -113,7 +113,6 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
@@ -134,7 +133,7 @@
               <h4>Diploma of Full Stack Web Development</h4>
               <h5>2022 - 2024</h5>
               <p><em>Holberton Tulsa, Tulsa, Oklahoma</em></p>
-              <p>3.5 GPA</p>
+              <p>In this program I learn to create, maintain, and improve web applications and websites, some of which are used every day. I am well-versed in ReactJS, SASS, responsive design, Accessibility, NodeJS, NoSQL, MySQL advanced, Redis, unit and integration tests, personal data, and authentication. </p>
             </div>
           </div>
           <div class="col-lg-6">
