--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Dustin Davis</h1>
-      <p>I'm know <span class="typed" data-typed-items="Python, JavaScript, TypeScript, Unittest, MySQL, NoSQL, CSS"></span></p>
+      <p>I know <span class="typed" data-typed-items="Python, JavaScript, TypeScript, Unittest, MySQL, NoSQL, CSS"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/Little_Fl1ck" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/DustinD12345321/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -206,7 +206,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -220,12 +220,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Dragon Dresser</h4>
+                <p>Web</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details3.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
