updated links and website name

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -67,7 +67,7 @@
                 <li><strong>Category</strong>: Python App</li>
                 <li><strong>Reason</strong>: Personal</li>
                 <li><strong>Project date</strong>: September, 2023</li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/DustinDavis02/Autoclicker</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/DustinDavis02/Autoclicker">AutoClicker</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
