--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -67,7 +67,7 @@
                 <li><strong>Category</strong>: Web Application</li>
                 <li><strong>Reason</strong>: Holberton</li>
                 <li><strong>Project date</strong>: August, 2023</li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/wdmd2022/dragon</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/wdmd2022/dragon">DragonDresser</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
