--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>March 28 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://dustindavis02.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.justdustinthings.com</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
