Adding download link for resume

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
+          <a href="Dustin-Resume.pdf" download> ~ Download it here ~ </a>
         </div>
         <div class="row">
           <div class="col-lg-6">
