_blank open link in new tab

--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -67,7 +67,7 @@
                 <li><strong>Category</strong>: Unity game</li>
                 <li><strong>Reason</strong>: Holberton</li>
                 <li><strong>Project date</strong>: April, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/DustinDavis02/HackSprint">SkyRunner</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/DustinDavis02/HackSprint" target="_blank">SkyRunner</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
